--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prince Thakarar - Student Devloper</title>
-    <link rel="stylesheet" href="prince.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -253,7 +253,7 @@
             loop: false
         });
     </script>
-    <script src="prince.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
