--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prince Thakarar - Student Devloper</title>
+    <title>Prince Thakarar - Student Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,9 +56,8 @@
             </div>
             <div class="media">
                 <a href="https://www.linkedin.com/in/prince-thakarar-345b0724b" target="_blank" title="linkedin"><img
-                        src="images/linkedin.png" class="linkedin" alt="linkedin"></a>
+                src="images/linkedin.png" class="linkedin" alt="linkedin"></a>
                 <a href="https://twitter.com/ThakararPrince" target="_blank" title="twitter"><img src="images/twitter.png" class="twitter" alt="twitter"></a>
-                <a href="https://www.threads.net/@prince_thakarar" target="_blank" title="threds"><img src="images/threads.png" class="threads" alt="threads" style="border-radius: 5px;"></a>
                 <a href="https://github.com/princethakarar" target="_blank" title="github"><img src="images/github.png" class="github" alt="github"></a>
             </div>
         </section>
@@ -255,5 +254,4 @@
     </script>
     <script src="script.js"></script>
 </body>
-
 </html>
