--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 <body>
     <header>
-        <div class="nav-bar">
-            <div class="left-head"><img src="images/prince-logo.png" class="logo" alt="logo"></div>
-            <div class="right-head">
+        <div class="navbar">
+                <img src="images/prince-logo.png" class="logo" alt="logo">
                 <ul>
                     <li><a href="#profile" title="profile" class="active"><i class="fa-solid fa-user"></i></a></li>
                     <li><a href="#skills" title="skills"><i class="fa-solid fa-computer"></i></a></li>
@@ -30,7 +29,6 @@
                     <div class="hov">projects</div>
                     <div class="hov">education</div>
                 </div> -->
-            </div>
         </div>
     </header>
     <main>
