--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="navbar">
+        <nav>
                 <img src="images/prince-logo.png" class="logo" alt="logo">
                 <ul>
                     <li><a href="#profile" title="profile" class="active"><i class="fa-solid fa-user"></i></a></li>
@@ -29,7 +29,7 @@
                     <div class="hov">projects</div>
                     <div class="hov">education</div>
                 </div> -->
-        </div>
+        </nav>
     </header>
     <main>
         <section id="profile" class="section">
