--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <header>
         <nav>
-                <img src="images/prince-logo.png" class="logo" alt="logo">
-                <ul>
-                    <li><a href="#profile" title="profile" class="active"><i class="fa-solid fa-user"></i></a></li>
-                    <li><a href="#skills" title="skills"><i class="fa-solid fa-computer"></i></a></li>
-                    <li><a href="#project" title="projects"><i class="fa-solid fa-sheet-plastic"></i></a></li>
-                    <li><a href="#education" title="education"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                </ul>
+            <img src="images/prince-logo.png" class="logo" alt="logo">
+            <ul>
+                <li><a href="#profile" title="profile" class="active"><i class="fa-solid fa-user"></i></a></li>
+                <li><a href="#skills" title="skills"><i class="fa-solid fa-computer"></i></a></li>
+                <li><a href="#project" title="projects"><i class="fa-solid fa-sheet-plastic"></i></a></li>
+                <li><a href="#education" title="education"><i class="fa-solid fa-graduation-cap"></i></a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -48,9 +48,11 @@
             </div>
             <div class="media">
                 <a href="https://www.linkedin.com/in/prince-thakarar-345b0724b" target="_blank" title="linkedin"><img
-                src="images/linkedin.png" class="linkedin" alt="linkedin"></a>
-                <a href="https://twitter.com/ThakararPrince" target="_blank" title="twitter"><img src="images/twitter.png" class="twitter" alt="twitter"></a>
-                <a href="https://github.com/princethakarar" target="_blank" title="github"><img src="images/github.png" class="github" alt="github"></a>
+                        src="images/linkedin.png" class="linkedin" alt="linkedin"></a>
+                <a href="https://twitter.com/ThakararPrince" target="_blank" title="twitter"><img
+                        src="images/twitter.png" class="twitter" alt="twitter"></a>
+                <a href="https://github.com/princethakarar" target="_blank" title="github"><img src="images/github.png"
+                        class="github" alt="github"></a>
             </div>
         </section>
         <section id="skills" class="section">
@@ -246,4 +248,5 @@
     </script>
     <script src="script.js"></script>
 </body>
+
 </html>
